--- a/package.json
+++ b/package.json
@@ -1,34 +1,30 @@
 {
-  "name": "buble-loader",
-  "version": "0.4.1",
-  "description": "lightweight ES2015 source loader for Webpack using Buble",
+  "name": "buble-latest-loader",
+  "version": "1.0.0",
+  "description": "buble-loader with latest Buble version, a safe replacement for abandoned buble-loader",
   "main": "index.js",
   "scripts": {
     "test": "node ./test/loader-test"
   },
-  "author": "Jaeho Lee <me@jaeholee.org>",
+  "author": "Timofey Tiunov <timoxa17@gmail.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git@github.com:sairion/buble-loader.git"
+    "url": "git@github.com:mrTimofey/buble-latest-loader.git"
   },
   "keywords": [
     "webpack",
     "buble",
     "ES2015",
-    "ES6"
+    "ES6",
+    "loader"
   ],
   "bugs": {
-    "url": "https://github.com/sairion/buble-loader/issues"
-  },
-  "devDependencies": {
-    "object-assign": "^4.0.1"
-  },
-  "peerDependencies": {
-    "buble": "^0.15.0",
-    "webpack": "*"    
+    "url": "https://github.com/mrTimofey/buble-latest-loader/issues"
   },
   "dependencies": {
-    "loader-utils": "^0.2.15"
+    "buble": "*",
+    "loader-utils": "^1.1.0",
+    "webpack": "*"
   }
 }
