fix package name and README link

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "buble-latest-loader",
+  "name": "buble-loader",
   "version": "1.0.0",
   "description": "buble-loader with latest Buble version, a safe replacement for abandoned buble-loader",
   "main": "index.js",
